--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "moment-timezone": "^0.5.40",
     "morgan": "^1.10.0"
   }
 }
